--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ button {
 </style>   
 </head>    
 <body>    
-    <center> <h1>MOVIES-APP</h1> </center>   
+    <center> <h1>PHONEPAY-APP</h1> </center>   
     <form>  
         <div class="container">   
             <label>Username : </label>   
